[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "xupscaler-reallife"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "Pillow>=10.0",
    "requests>=2.31",
    "tqdm>=4.66",
    "huggingface_hub>=0.23",
    "torch>=2.1",
    "torchvision>=0.16",
]

[project.scripts]
xup = "xupscaler.cli:main"

[tool.setuptools.packages.find]
where = ["."]
